# ascii-based-image

./: .gitignore  README.MD  README.md  ascii_img_generator.py  gray_scale.py  main.py  pyproject.toml  requirements.txt
images/exports/: heart.txt  love-you.txt  saturn-.txt  saturn-00.txt  saturn-01.jpg.txt  saturn-07.txt  saturn.jpg.txt.csv
images/imports/: statue-of-liberty-02-bw.txt  statue-of-liberty-02.txt
src/: ascii_img_generator.py  gray_scale.py  main.py  to_csv.py
src/ascii_image/: __init__.py  ascii_img_generator.py  cli.py  gray_scale.py  to_csv.py
